--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "npx puppeteer browsers install chrome"
+    "postinstall": "PUPPETEER_CACHE_DIR=/tmp/.puppeteer npx puppeteer browsers install chrome"
   },
   "dependencies": {
     "archiver": "^7.0.1",
